--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "katex": "^0.16.28",
+    "lucide-react": "^0.563.0",
     "nanoid": "^5.1.6",
     "next": "16.1.6",
     "react": "19.2.3",
